modules/eks/ingress.yaml
#pass ingress rules
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
    - host: "frontend-dev.pdevops78.online"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: frontend
                port:
                  number: 80



---
# for prometheus
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
    - host: "prometheus-dev.pdevops78.online"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: prometheus-kube-prometheus-prometheus
                port:
                  number: 9090


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
spec:
  rules:
    - host: "argocd-dev.pdevops78.online"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
